# WatchTower

./: .gitignore  AGENTS.md  README.md  THEREWRITE.md
core/python/: README.md  pyproject.toml
core/python/src/watchtower/: __init__.py  __main__.py  cli.py  status.py  work_items.py  workspace.py
core/python/tests/: test_cli.py
