[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "watchtower"
version = "0.1.0"
description = "Bootstrap Python workspace for the WatchTower product repo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
watchtower = "watchtower.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
